# demos

C++/multithread_log/: CMakeLists.txt  logfile.txt  main.cpp  readme.md  threadsafe_stack_queue.cpp
C++/multithread_log/include/: log.h  threadsafe_queue.h  threadsafe_stack.h
C++/opencv/: CMakeLists.txt  main.cpp  main_advance.cpp  readme.md
python/multi_thread/: multi_thread.py
